package com.vm.identityprovider.dto;

public class AuthResponse {

}
